HW-8 auth draft
