# homework-8/myBlogBeeGo/swagger/swagger.yml
@@ -106,7 +106,7 @@ paths:
         "500":
           description: server error
   /users/{id}:
-    get:
+    post:
       tags:
       - users
       description: get user
@@ -114,9 +114,15 @@ paths:
       parameters:
       - in: path
         name: id
-        description: ID of the post
+        description: name of user
         required: true
         type: string
+      - in: body
+        name: body
+        description: json user body
+        required: true
+        schema:
+          $ref: '#/definitions/models.User'
       responses:
         "200":
           description: ""
@@ -125,7 +131,7 @@ paths:
         "404":
           description: not found
         "500":
-          description: body is empty
+          description: server error
 definitions:
   models.Post:
     title: Post
@@ -144,9 +150,9 @@ definitions:
     title: User
     type: object
     properties:
-      Name:
+      uname:
         type: string
-      Pass:
+      upass:
         type: string
   primitive.ObjectID:
     title: ObjectID
